--- a/frontend/securegpt/public/index.html
+++ b/frontend/securegpt/public/index.html
@@ -1,29 +1,71 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>SecureGPT</title> 
-    <link rel="stylesheet" href="style.css"> 
-</head> 
-<body> 
-    <header> 
-        <h1>New chat</h1> 
-        <h2>SecureGPT</h2> 
-    </header> 
-    <main> 
-        <div class="chat-history"> 
-            <div class="chat-message user">How can I help you today?</div> 
-            <div class="chat-message ai">Write a short story</div> 
-            <div class="chat-message ai">Plan a trip to experience Seoul like a local</div> 
-            </div> 
-        <div class="chat-input"> 
-            <input type="text" placeholder="Type your message here..."> 
-            <button>Send</button> 
-        </div> 
-    </main> 
-    <footer> 
-        <p>SecureGPT can make mistakes. Check important information yourself before acting on it.</p> 
-    </footer> 
-</body> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SecureGPT: Stay Protected!</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <div class="sidebar-logo">
+                    <img src="images/user.png" alt="ChatGPT">
+                </div>
+                <h1>SecureGPT - Stay Secure</h1>
+            </div>
+            <nav class="sidebar-nav">
+                <ul>
+                    <li><a href="#">SecureGPT 1.0</a></li>
+                    <li><a href="#">Machine Learning Model</a></li>
+                    <li><a href="#">Literature Review</a></li>
+                    <li><a href="#">Explore other secure GPTs</a></li>
+                </ul>
+            </nav>
+            <div class="recent-activities">
+                <h2>Today</h2>
+                <ul>
+                    <li>Preprocess Text for NLP</li>
+                    <li>Launch Jupyter in Kubeflow</li>
+                    <li>Masks Postprocessing: Differences</li>
+                    <li>Summarize User Request</li>
+                    <li>Integrating Negative Prior: SAM</li>
+                </ul>
+                <h2>Yesterday</h2>
+                <ul>
+                    <li>Visualize Singapore Police Boundaries</li>
+                </ul>
+            </div>
+            <button class="add-team">Add Team Workspace</button>
+        </div>
+        <div class="main-content">
+            <div class="content">
+                <div class="logo-center">
+                    <img src="images/Logo.png" alt="ChatGPT Logo">
+                </div>
+                <div class="buttons">
+                    <div class="btn">
+                        <span>Input article text in pdf or word format</span>
+                    </div>
+                    <div class="btn">
+                        <span>Select how many times to analyse a text and receive sentiment information</span>
+                    </div>
+                    <div class="btn">Output more information on the input</span>
+                    </div>
+                    <div class="btn">
+                        <span>Obtain more information about the person or organisation in this article</span>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="message-box">
+                    <input type="text" placeholder="Message SecureGPT">
+                    <button class="send-btn">Send</button>
+                </div>
+                <div class="info">SecureGPT can make mistakes. Check important info.</div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
