Use JS instead of HTML to ensure more sanity in the future

--- a/frontend/securegpt/public/index.html
+++ b/frontend/securegpt/public/index.html
@@ -1,71 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecureGPT: Stay Protected!</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <div class="sidebar">
-            <div class="sidebar-header">
-                <div class="sidebar-logo">
-                    <img src="images/user.png" alt="ChatGPT">
-                </div>
-                <h1>SecureGPT - Stay Secure</h1>
-            </div>
-            <nav class="sidebar-nav">
-                <ul>
-                    <li><a href="#">SecureGPT 1.0</a></li>
-                    <li><a href="#">Machine Learning Model</a></li>
-                    <li><a href="#">Literature Review</a></li>
-                    <li><a href="#">Explore other secure GPTs</a></li>
-                </ul>
-            </nav>
-            <div class="recent-activities">
-                <h2>Today</h2>
-                <ul>
-                    <li>Preprocess Text for NLP</li>
-                    <li>Launch Jupyter in Kubeflow</li>
-                    <li>Masks Postprocessing: Differences</li>
-                    <li>Summarize User Request</li>
-                    <li>Integrating Negative Prior: SAM</li>
-                </ul>
-                <h2>Yesterday</h2>
-                <ul>
-                    <li>Visualize Singapore Police Boundaries</li>
-                </ul>
-            </div>
-            <button class="add-team">Add Team Workspace</button>
-        </div>
-        <div class="main-content">
-            <div class="content">
-                <div class="logo-center">
-                    <img src="images/Logo.png" alt="ChatGPT Logo">
-                </div>
-                <div class="buttons">
-                    <div class="btn">
-                        <span>Input article text in pdf or word format</span>
-                    </div>
-                    <div class="btn">
-                        <span>Select how many times to analyse a text and receive sentiment information</span>
-                    </div>
-                    <div class="btn">Output more information on the input</span>
-                    </div>
-                    <div class="btn">
-                        <span>Obtain more information about the person or organisation in this article</span>
-                    </div>
-                </div>
-            </div>
-            <div class="footer">
-                <div class="message-box">
-                    <input type="text" placeholder="Message SecureGPT">
-                    <button class="send-btn">Send</button>
-                </div>
-                <div class="info">SecureGPT can make mistakes. Check important info.</div>
-            </div>
-        </div>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
